--- a/templates/mail_body.html
+++ b/templates/mail_body.html
@@ -11,6 +11,6 @@
 </head>
     <body>
         <h1>{% trans "You are one click from the stories!" %}</h1><br>
-        <h2>{% trans "Please click" <a href="{{ link }}">{% trans "here" %}</a> {% trans "to confirm your mhios account" %}</h2>
+        <h2>{% trans "Please click" %} <a href="{{ link }}">{% trans "here" %}</a> {% trans "to confirm your mhios account" %}</h2>
     </body>
 </html>
