--- a/accounts/templates/registration/password_reset_complete.html
+++ b/accounts/templates/registration/password_reset_complete.html
@@ -6,7 +6,7 @@
 <div class="container">
   <h2>{% trans "Password successfully changed" %}</h2>
   <p>
-    {% trans "Your password has been set. You may go ahead and" %} <a href="{% url 'login' %}">{% trans "sign in" %}</a> now.
+    {% trans "Your password has been set. You may go ahead and" %} <a href="{% url 'login' %}">{% trans "sign in" %}</a> {% trans "now." %}
     </p>
   </div>
 {% endblock %}
