--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -6,7 +6,10 @@
 <div class="container">
   <h2>{% trans "Log in" %}</h2>
   {% if form.errors %}
-    <p>{% trans "Your username and password didn't match. Please try again." %}</p>
+  <p>{% trans "Your username and password didn't match. Please try again." %}</p>
+  {% for error in form.username.errors %}
+  <p class="text-danger">{{ error }}</p>
+  {% endfor %}
   {% endif %}  
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
