good message when not active user tries to login

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -7,8 +7,10 @@
   <h2>{% trans "Log in" %}</h2>
   {% if form.errors %}
   <p>{% trans "Your username and password didn't match. Please try again." %}</p>
-  {% for error in form.errors %}
-  <p class="text-danger">{{ error }}</p>
+  {% for field in form %}
+  {% for error in field.errors %}
+  <p class="text-danger">{{ error }} </p>
+  {% endfor %}
   {% endfor %}
   {% endif %}  
   <form method="post" action="{% url 'login' %}">
