better login error

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -6,13 +6,19 @@
 <div class="container">
   <h2>{% trans "Log in" %}</h2>
   {% if form.errors %}
-  <p>{% trans "Your username and password didn't match. Please try again." %}</p>
-  {% for field in form %}
-  {% for error in field.errors %}
-  <p class="text-danger">{{ error }} </p>
-  {% endfor %}
-  {% endfor %}
-  {% endif %}  
+    {% for field in form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+  {% endif %}
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     <p>
