--- a/accounts/templates/registration/password_reset_email.html
+++ b/accounts/templates/registration/password_reset_email.html
@@ -3,7 +3,7 @@
 {% blocktranslate %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktranslate %}
 
 {% translate "Please go to the following page and choose a new password:" %}
-{% block reset_link %}
+<a href="{% block reset_link %}"> Reset your password <a>
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
 {% translate 'Your username, in case you’ve forgotten:' %} {{ user.get_username }}
