custom password recovery email

--- a/accounts/templates/registration/password_reset_email.html
+++ b/accounts/templates/registration/password_reset_email.html
@@ -1,15 +1,31 @@
 {% load i18n %}{% autoescape off %}
-<h1> {% trans "Reset your password" %} </h1>
-{% blocktranslate %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktranslate %}
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <style>
+        h1{ color: blue; }
+    </style>
+</head>
+    <body>
+
+      <h1> {% trans "Reset your password" %} </h1>
+      <p>
+	{% blocktranslate %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktranslate %}
 {% translate "Please go to the following page and choose a new password:" %}
-<a href="{% block reset_link %}"> Reset your password <a>
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
-{% endblock %}
+<a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}"> {% trans Reset your password here %} <a>
+      </p>
+      <p>
 {% translate 'Your username, in case you’ve forgotten:' %} {{ user.get_username }}
-
+      </p>
+      <p>
 {% translate "Thanks for using our site!" %}
-
-{% blocktranslate %}The {{ site_name }} team{% endblocktranslate %}
+      </p>
+      <p>
+	{% blocktranslate %}The {{ site_name }} team{% endblocktranslate %}
+      </p>
 
 {% endautoescape %}
+    </body>
+</html>
