--- a/accounts/templates/registration/password_reset_email.html
+++ b/accounts/templates/registration/password_reset_email.html
@@ -14,7 +14,7 @@
       <p>
 	{% blocktranslate %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktranslate %}
 {% translate "Please go to the following page and choose a new password:" %}
-<a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}"> {% trans Reset your password here %} <a>
+<a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}"> {% trans "Reset your password here" %} <a>
       </p>
       <p>
 {% translate 'Your username, in case you’ve forgotten:' %} {{ user.get_username }}
