custom password recovery email

--- a/accounts/templates/registration/password_reset_email.html
+++ b/accounts/templates/registration/password_reset_email.html
@@ -1,18 +1,15 @@
 {% load inlinecss %}
-{% inlinecss "css/base.css" %}
 {% load i18n %}{% autoescape off %}
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    {% inlinecss "css/base.css" %}
     <meta charset="UTF-8">
-    <style>
-        h1{ color: blue; }
-    </style>
 </head>
     <body>
 
-      <h1> {% trans "Reset your password" %} </h1>
+      <h1 class="h1"> {% trans "Reset your password" %} </h1>
       <p>
 	{% blocktranslate %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktranslate %}
 {% translate "Please go to the following page and choose a new password:" %}
