custom password recovery email

--- a/accounts/templates/registration/password_reset_email.html
+++ b/accounts/templates/registration/password_reset_email.html
@@ -1,10 +1,9 @@
 {% load inlinecss %}
 {% load i18n %}{% autoescape off %}
-
+{% inlinecss "css/base.css" %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {% inlinecss "css/base.css" %}
+  <head
     <meta charset="UTF-8">
 </head>
     <body>
