--- a/accounts/templates/registration/password_reset_email.html
+++ b/accounts/templates/registration/password_reset_email.html
@@ -1,15 +1,17 @@
 {% load inlinecss %}
 {% load i18n %}{% autoescape off %}
-{% inlinecss "css/base.css" %}
+{% inlinecss "css/emails.css" %}
+
 <!DOCTYPE html>
 <html lang="en">
-  <head
+<head>
     <meta charset="UTF-8">
 </head>
     <body>
+      <div>
 
-      <h1 class="h1"> {% trans "Reset your password" %} </h1>
-      <p>
+	<h1> {% trans "Reset your password" %} </h1>
+	<p>
 	{% blocktranslate %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktranslate %}
 {% translate "Please go to the following page and choose a new password:" %}
 <a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}"> {% trans "Reset your password here" %} <a>
@@ -24,7 +26,9 @@
 	{% blocktranslate %}The {{ site_name }} team{% endblocktranslate %}
       </p>
 
-{% endautoescape %}
+
+      </div>
     </body>
 </html>
 {% endinlinecss %}
+{% endautoescape %}
