--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,19 +6,20 @@
     --theme-3-color: #182628;
 }
 
-h1, .h1 { font-size: 2rem; }
+h1 { font-size: 2rem; }
 h2 { font-size: 1.5rem; }
 h3 { font-size: 1.17rem; }
 h4 { font-size: 1.12rem; }
 h5 { font-size: .83rem; }
 h6 { font-size: .75rem; }
 
-body, .body {
+body {
   padding: 0;
   margin: 0;
   background: var(--theme-0-color);
   color: var(--theme-3-color);
 }
+
 
 .full-width {
     padding: 0;
