--- a/accounts/templates/registration/password_reset_email.html
+++ b/accounts/templates/registration/password_reset_email.html
@@ -8,26 +8,18 @@
     <meta charset="UTF-8">
 </head>
     <body>
-      <div>
-
-	<h1> {% trans "Reset your password" %} </h1>
-	<p>
+	<h1> {% trans "Reset your password on mhios.com" %} </h1>
 	{% blocktranslate %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktranslate %}
-{% translate "Please go to the following page and choose a new password:" %}
-<a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}"> {% trans "Reset your password here" %} <a>
-      </p>
-      <p>
+	<br/>
+	{% translate "Please go to the following page and choose a new password:" %}
+	      <br/><br/>
+<a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}"> {% trans "Reset your password here" %} </a>
+      <br/><br/>
 {% translate 'Your username, in case you’ve forgotten:' %} {{ user.get_username }}
-      </p>
-      <p>
+      <br/>
 {% translate "Thanks for using our site!" %}
-      </p>
-      <p>
+      <br/>
 	{% blocktranslate %}The {{ site_name }} team{% endblocktranslate %}
-      </p>
-
-
-      </div>
     </body>
 </html>
 {% endinlinecss %}
