--- a/templates/mail_body.html
+++ b/templates/mail_body.html
@@ -1,16 +1,16 @@
-{% load i18n %}
-
+{% load inlinecss %}
+{% load i18n %}{% autoescape off %}
+{% inlinecss "css/emails.css" %}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <style>
-        h1{ color: blue; }
-    </style>
 </head>
     <body>
-        <h1>{% trans "You are one click from the stories!" %}</h1><br>
-        <h2>{% trans "Please click" %} <a href="{{ link }}">{% trans "here" %}</a> {% trans "to confirm your mhios account" %}</h2>
+      <h1> {% trans "You are one click from the stories!" %} </h1>
+      {% trans "Please click" %} <a href="{{ link }}">{% trans "here" %}</a> {% trans "to confirm your mhios account" %}
     </body>
 </html>
+{% endinlinecss %}
+{% endautoescape %}
