--- a/templates/mail_body.html
+++ b/templates/mail_body.html
@@ -15,7 +15,7 @@
 	        <br/>
 		{% translate "Thanks for using our site!" %}
 		<br/>
-		{% blocktranslate %}The {{ site_name }} team{% endblocktranslate %}
+		{% blocktranslate %}The www.mhios.com team{% endblocktranslate %}
     </body>
 </html>
 {% endinlinecss %}
