--- a/templates/mail_body.html
+++ b/templates/mail_body.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
 </head>
     <body>
-      <h1> {% trans "You are one click from the stories!" %} </h1>
+      <h1> {% trans "You are one click away from the stories!" %} </h1>
       {% trans "You email address needs to be validated in order to confirm your account at www.mhios.com" %}
           <br/><br/>
 	  <a href="{{ link }}">{% trans "Validate your address here" %}</a>
