login logout icon

--- a/templates/base.html
+++ b/templates/base.html
@@ -145,9 +145,33 @@
 	    </li>
 	    <li class="nav-item">
               {% if user.is_authenticated %}
-	      <a class="nav-link" href="{% url "logout" %}" >{% trans "Log Out" %}</a>
+	      <a class="nav-link" href="{% url "logout" %}" title={% trans "Log Out" %} ><!--											   --><svg class="navicon" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+		<path  d="M301.697,491.922H90.785c-11.025,0-21.029-9.649-21.029-20.669V39.39c0-11.02,10.005-19.311,21.029-19.311h210.912
+			c5.544,0,10.039-4.49,10.039-10.039C311.736,4.49,307.24,0,301.697,0H90.785C68.692,0,49.677,17.292,49.677,39.39v431.863
+			C49.677,493.35,68.692,512,90.785,512h210.912c5.544,0,10.039-4.49,10.039-10.039S307.24,491.922,301.697,491.922z"/>
+		<path  d="M459.745,243.586l-90.353-100.392c-3.711-4.127-10.059-4.451-14.176-0.745c-4.123,3.706-4.456,10.4-0.745,14.517
+			l75.272,83.976H201.304c-5.544,0-10.039,4.49-10.039,10.039c0,5.549,4.495,10.039,10.039,10.039h226.745l-73.216,72.877
+			c-3.922,3.922-3.922,10.103,0,14.025c1.961,1.961,4.529,2.858,7.098,2.858c2.569,0,5.137-1.022,7.098-2.983l90.353-90.375
+			C463.157,253.647,463.319,247.556,459.745,243.586z" />
+	      	    </svg><!--
+		    --></a>
 	      {% else %}
-	      <a class="nav-link" href="{% url "login" %}" >{% trans "Log in" %}</a>
+	      <a class="nav-link" href="{% url "login" %}" title={% trans "Log in" %}><!--											--><svg class="navicon" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+		<path d="M306.716,491.922H95.804c-11.02,0-21.029-9.649-21.029-20.669V39.39c0-11.02,10.01-19.311,21.029-19.311h210.912
+			c5.549,0,10.039-4.49,10.039-10.039C316.755,4.49,312.265,0,306.716,0H95.804C73.706,0,54.696,17.292,54.696,39.39v431.863
+			c0,22.098,19.01,40.748,41.108,40.748h210.912c5.549,0,10.039-4.49,10.039-10.039S312.265,491.922,306.716,491.922z"/>
+		<path d="M447.265,240.941h-218.4l75.272-83.976c3.706-4.118,3.373-10.642-0.745-14.348c-4.127-3.706-10.461-3.456-14.176,0.662
+			l-90.353,100.348c-0.137,0.154-0.233,0.309-0.36,0.468c-0.23,0.289-0.456,0.564-0.655,0.877c-0.157,0.25-0.284,0.507-0.419,0.767
+			c-0.157,0.306-0.316,0.608-0.443,0.934c-0.115,0.296-0.194,0.596-0.28,0.9c-0.086,0.311-0.184,0.615-0.24,0.939
+			c-0.066,0.363-0.086,0.728-0.113,1.096c-0.015,0.235-0.069,0.456-0.069,0.694c0,0.049,0.015,0.096,0.015,0.142
+			c0.005,0.412,0.066,0.821,0.123,1.228c0.034,0.24,0.037,0.485,0.086,0.718c0.083,0.387,0.226,0.76,0.353,1.135
+			c0.247,0.73,0.561,1.424,0.961,2.066c0.059,0.096,0.098,0.204,0.162,0.299c0.373,0.554,0.797,1.068,1.267,1.537l90.328,90.326
+			c1.961,1.961,4.529,2.941,7.098,2.941c2.568,0,5.137-0.98,7.098-2.941c3.922-3.922,3.922-9.934,0-13.855l-73.216-72.878h216.706
+			c5.549,0,10.039-4.49,10.039-10.039C457.304,245.431,452.814,240.941,447.265,240.941z"/>
+	    </svg><!--
+		    --></a>
 	    <li class="nav-item">
 	    </li>
 	      <a class="nav-link" href="{% url "signup" %}" >{% trans "Sign up" %}</a>
