--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -6,18 +6,10 @@
 <div class="container">
   <h2>{% trans "Log in" %}</h2>
   {% if form.errors %}
-    {% for field in form %}
-        {% for error in field.errors %}
-            <div class="alert alert-danger">
-                <strong>{{ error|escape }}</strong>
-            </div>
-        {% endfor %}
-    {% endfor %}
-    {% for error in form.non_field_errors %}
-        <div class="alert alert-danger">
-            <strong>{{ error|escape }}</strong>
-        </div>
-    {% endfor %}
+  <div class="alert alert-danger">{% trans "Login error. Your username and password did not match or your email is not validated. Please try again or click the email activation link." %}</div>
+  {% for error in form.username.errors %}
+  <p class="text-danger">{{ error }}</p>
+  {% endfor %}
   {% endif %}
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
