--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
 -->{% endif %}</a>
 	      </form>
 	    </li>
-	    <li>
+	    <li class="nav-item">
 	      <a class="nav-link" title="{% trans "Library" %}" href="{% url 'library:index' %}"><!--
 		 --><svg class="navicon {% if request.path == "/"|add:LANGUAGE_CODE|add:"/library/" %}activenav{% endif %}" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 297 297" style="enable-background:new 0 0 297 297;" xml:space="preserve">
@@ -110,7 +110,7 @@
 	    </svg><!--
 		    --></a>
 	    </li>
-	    <li>
+	    <li class="nav-item">
 	      <a class="nav-link" title="{% trans "Story teller" %}" href="{% url 'reader:index' %}"><!--
 								    --><svg class="navicon {% if request.path == "/"|add:LANGUAGE_CODE|add:"/reader/" %}activenav{% endif %}" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 400 400">
 		<path d="M297.465,63.213H95.538c-6.784,0-12.303-5.52-12.303-12.305c0-6.784,5.519-12.307,12.303-12.307h220.226
@@ -125,7 +125,7 @@
 
 								    --></a>
 	    </li>
-	    <li>
+	    <li class="nav-item">
 	      <a class="nav-link" title="{% trans "Discussion forum" %}" href="/{{ LANGUAGE_CODE }}/forum"><!--
 		--><svg class="navicon {% if request.path == "/"|add:LANGUAGE_CODE|add:"/forum/" %}activenav{% endif %}" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -143,10 +143,10 @@
 	  </svg><!--    
 --></a>
 	    </li>
-	    <li class="nav-item">
-              {% if user.is_authenticated %}
+	    {% if user.is_authenticated %}
+	    	    <li class="nav-item">
 	      <a class="nav-link" href="{% url "logout" %}" title={% trans "Log Out" %} ><!--											   --><svg class="navicon" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+	 viewBox="0 0 512 512">
 		<path  d="M301.697,491.922H90.785c-11.025,0-21.029-9.649-21.029-20.669V39.39c0-11.02,10.005-19.311,21.029-19.311h210.912
 			c5.544,0,10.039-4.49,10.039-10.039C311.736,4.49,307.24,0,301.697,0H90.785C68.692,0,49.677,17.292,49.677,39.39v431.863
 			C49.677,493.35,68.692,512,90.785,512h210.912c5.544,0,10.039-4.49,10.039-10.039S307.24,491.922,301.697,491.922z"/>
@@ -155,8 +155,40 @@
 			c-3.922,3.922-3.922,10.103,0,14.025c1.961,1.961,4.529,2.858,7.098,2.858c2.569,0,5.137-1.022,7.098-2.983l90.353-90.375
 			C463.157,253.647,463.319,247.556,459.745,243.586z" />
 	      	    </svg><!--
-		    --></a>
-	      {% else %}
+			    --></a>
+		    </li>
+		    	    <li class="nav-item">
+	      <a class="nav-link" href="{% url "edit_user" %}" title={% trans "Edit user profile" %} ><!--											   --><svg class="navicon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 57.27 57.27">
+	<path d="M55.761,34.724l-2.85-2.85c-1.164-1.164-3.057-1.162-4.221,0L33.299,47.265l-2.121,7.779l-0.519,0.519
+		c-0.388,0.388-0.389,1.014-0.006,1.405l-0.005,0.02l0.019-0.005c0.194,0.191,0.446,0.288,0.699,0.288
+		c0.256,0,0.512-0.098,0.707-0.293l0.52-0.52l7.778-2.121l15.39-15.391C56.925,37.781,56.925,35.888,55.761,34.724z M35.608,47.784
+		l10.243-10.243l4.243,4.242L39.851,52.027L35.608,47.784z M34.706,49.71l3.22,3.22l-4.428,1.208L34.706,49.71z M54.347,37.531
+		l-2.839,2.839l-4.243-4.242l2.839-2.839c0.385-0.385,1.01-0.384,1.394-0.001l2.85,2.85C54.731,36.521,54.731,37.147,54.347,37.531z
+		"/>
+	<path d="M28.135,10c3.425,0,5.897,0.83,7.346,2.466c1.692,1.911,1.415,4.361,1.413,4.381l-0.009,5.701l0.33,0.298
+		c0.359,0.324,0.557,0.758,0.557,1.223v3.545c0,0.724-0.475,1.356-1.181,1.574c-0.527,0.163-0.823,0.723-0.661,1.251
+		c0.162,0.527,0.722,0.824,1.25,0.661c1.55-0.479,2.591-1.879,2.591-3.486v-3.545c0-0.866-0.318-1.708-0.886-2.369v-4.667
+		c0.052-0.52,0.236-3.448-1.883-5.864C35.16,9.065,32.177,8,28.135,8s-7.024,1.065-8.867,3.168
+		c-2.119,2.416-1.935,5.346-1.883,5.864v4.667c-0.568,0.661-0.886,1.503-0.886,2.369v3.545c0,1.101,0.494,2.128,1.339,2.821
+		c0.81,3.173,2.476,5.575,3.092,6.389v2.894c0,0.816-0.445,1.566-1.162,1.958l-7.907,4.313c-0.258,0.141-0.513,0.305-0.768,0.489
+		C5.866,41.781,2.635,34.991,2.635,27.5c0-14.061,11.439-25.5,25.5-25.5s25.5,11.439,25.5,25.5c0,0.553,0.448,1,1,1s1-0.447,1-1
+		c0-15.163-12.336-27.5-27.5-27.5s-27.5,12.337-27.5,27.5c0,7.977,3.399,15.216,8.913,20.272l-0.012,0.01l0.297,0.25
+		c2.323,2.07,5.007,3.75,7.97,4.943c0.166,0.068,0.33,0.141,0.497,0.206c0.348,0.133,0.703,0.251,1.058,0.37
+		c0.383,0.129,0.768,0.25,1.157,0.362c0.275,0.079,0.549,0.159,0.827,0.229c0.701,0.179,1.408,0.339,2.123,0.462
+		c0.057,0.01,0.114,0.015,0.17,0.015c0.479,0,0.901-0.344,0.985-0.831c0.093-0.544-0.272-1.062-0.817-1.154
+		c-0.002,0-0.005-0.001-0.007-0.001c-0.656-0.112-1.297-0.26-1.932-0.42c-0.221-0.056-0.442-0.114-0.661-0.176
+		c-0.427-0.12-0.846-0.255-1.262-0.395c-0.498-0.169-0.99-0.353-1.475-0.553c-0.203-0.083-0.406-0.163-0.606-0.251
+		c-0.414-0.183-0.825-0.375-1.229-0.58c-0.037-0.019-0.073-0.039-0.11-0.057c-1.332-0.684-2.608-1.484-3.808-2.396
+		c0.036-0.021,0.071-0.04,0.106-0.06l7.907-4.313c1.359-0.742,2.204-2.165,2.204-3.714v-3.603l-0.233-0.278
+		c-0.021-0.025-2.176-2.634-2.999-6.215l-0.091-0.396l-0.341-0.221c-0.481-0.311-0.769-0.831-0.769-1.392v-3.545
+		c0-0.465,0.198-0.898,0.557-1.223l0.33-0.298v-5.57l-0.009-0.131c-0.003-0.024-0.298-2.429,1.396-4.36
+		C22.219,10.837,24.696,10,28.135,10z"/>
+	      	    </svg><!--
+			    --></a>
+	    </li>
+	    {% else %}
+	    <li class="nav-item">
 	      <a class="nav-link" href="{% url "login" %}" title={% trans "Log in" %}><!--											--><svg class="navicon" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
 		<path d="M306.716,491.922H95.804c-11.02,0-21.029-9.649-21.029-20.669V39.39c0-11.02,10.01-19.311,21.029-19.311h210.912
@@ -172,8 +204,8 @@
 			c5.549,0,10.039-4.49,10.039-10.039C457.304,245.431,452.814,240.941,447.265,240.941z"/>
 	    </svg><!--
 		    --></a>
-	    <li class="nav-item">
 	    </li>
+    	    <li class="nav-item">
 	      <a class="nav-link" href="{% url "signup" %}" title={% trans "Sign up" %} ><!--
 											   --><svg class="navicon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 59 59" style="enable-background:new 0 0 59 59;" xml:space="preserve">
@@ -199,9 +231,9 @@
 		l0.704,0.603c3.904,3.341,8.655,5.483,13.68,6.26c0.357,0.056,0.717,0.102,1.078,0.145c0.391,0.045,0.781,0.084,1.174,0.112
 		c0.579,0.043,1.162,0.071,1.75,0.078c0.062,0,0.123,0.008,0.185,0.008c0.006,0,0.01-0.003,0.016-0.003
 		c0.042,0,0.083,0.003,0.125,0.003c0.553,0,1-0.447,1-1S28.053,53.5,27.5,53.5z"/><!--
---></a>
-              {% endif %}
+												--></a>
 	    </li>
+              {% endif %}
 	    {% block navbar %}
             {% endblock %}
 	  </ul>
