--- a/static/css/base.css
+++ b/static/css/base.css
@@ -86,8 +86,8 @@ a:hover {
 
 
 .flag {
-    width: 40;
-    height: 20;
+    width: 40px;
+    height: 20px;
 }
 
 .activenav>path{ 
@@ -96,8 +96,8 @@ a:hover {
 }
 
 .navicon {
-    width: 25;
-    height: 25;
+    width: 25px;
+    height: 25px;
 }
 
 .logo {
