--- a/reader/templates/reader/index.html
+++ b/reader/templates/reader/index.html
@@ -5,7 +5,7 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/reader.css' %}">
+<link rel="stylesheet" href="{% static 'css/reader.css' %}" type='text/css'>
 {% endblock %}
 
 
