--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     {% block css %}
     {% endblock %}
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" type='text/css'>
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     {% block head %}
     {% endblock %}
