center carousel image for large screens

--- a/myopenstories/templates/myopenstories/index.html
+++ b/myopenstories/templates/myopenstories/index.html
@@ -16,7 +16,7 @@
     <li data-target="#myCarousel" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item text-center active">
       <img class="first-slide img-fluid" src="{% static 'media/carousel_0.jpg' %}" alt="First slide">
       <div class="container">
         <div class="carousel-caption text-left">
@@ -25,7 +25,7 @@
         </div>
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item text-center">
       <img class="second-slide img-fluid" src="{% static 'media/carousel_1.jpg' %}" alt="Second slide">
       <div class="container">
         <div class="carousel-caption text-left">
@@ -34,8 +34,8 @@
         </div>
       </div>
     </div>
-    <div class="carousel-item">
-      <img class="second-slide img-fluid" src="{% static 'media/carousel_2.jpg' %}" alt="Third slide">
+    <div class="carousel-item text-center">
+      <img class="third-slide img-fluid" src="{% static 'media/carousel_2.jpg' %}" alt="Third slide">
       <div class="container">
         <div class="carousel-caption text-left">
           <p class="d-none d-sm-block"><a class="btn btn-lg btn-primary" href={% url 'signup' %} role="button">{% trans "Sign up today" %}</a></p>
@@ -43,8 +43,8 @@
         </div>
       </div>
     </div>
-    <div class="carousel-item">
-      <img class="second-slide img-fluid" src="{% static 'media/carousel_3.jpg' %}" alt="Fourth slide">
+    <div class="carousel-item text-center">
+      <img class="fourth-slide img-fluid" src="{% static 'media/carousel_3.jpg' %}" alt="Fourth slide">
       <div class="container">
         <div class="carousel-caption text-left">
           <p class="d-none d-sm-block"><a class="btn btn-lg btn-primary" href="{% url 'reader:index' %}" role="button">{% trans "Listen to a story" %}</a></p>
@@ -52,8 +52,8 @@
         </div>
       </div>
     </div>
-    <div class="carousel-item">
-      <img class="third-slide img-fluid" src="{% static 'media/carousel_4.jpg' %}" alt="Fifth slide">
+    <div class="carousel-item text-center">
+      <img class="fifth-slide img-fluid" src="{% static 'media/carousel_4.jpg' %}" alt="Fifth slide">
       <div class="container">
         <div class="carousel-caption text-right">
           <p class="d-none d-sm-block"><a class="btn btn-lg btn-primary" href="forum" role="button">{% trans "Explore the forum" %}</a></p>
